# querri-python-sdk

./: CLAUDE.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
examples/: 02_user_management.py  03_access_policies.py  05_get_session.py  09_async_client.py  11_user_scoped_client.py  12_data_operations.py
querri/: __init__.py  _auth.py  _base_client.py  _client.py  _config.py  _convenience.py  _exceptions.py  _pagination.py  _streaming.py  _user_client.py
querri/cli/: _app.py  _context.py  _image.py  _output.py  audit.py  auth.py  chat.py  chats.py  dashboards.py  data.py  embed.py  keys.py  policies.py  projects.py  sharing.py  skills.py  sources.py  steps.py  users.py  views.py  whoami.py
querri/resources/: __init__.py  audit.py  dashboards.py  data.py  embed.py  files.py  keys.py  policies.py  projects.py  sharing.py  skills.py  sources.py  usage.py  users.py  views.py
querri/types/: __init__.py  audit.py  chat.py  dashboard.py  data.py  embed.py  file.py  key.py  policy.py  project.py  sharing.py  skill.py  usage.py  user.py
scripts/: release.sh
skills/: README.md
skills/querri-cli/: SKILL.md
skills/querri-cli/references/: json-shapes.md  troubleshooting.md
tests/: rls-integration-results.md  test_cli.py  test_cli_commands.py  test_client.py  test_config.py  test_convenience.py  test_exceptions.py  test_new_features.py  test_pagination.py  test_resources.py  test_rls_integration.py  test_security.py  test_skills.py  test_streaming.py  test_streaming_v2.py
