[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "querri"
version = "0.2.0"
description = "Python SDK and CLI for the Querri data analysis platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Querri", email = "support@querri.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
    "typing_extensions>=4.0",
]

[project.optional-dependencies]
cli = [
    "typer[all]>=0.12,<1.0",
    "rich>=13.0,<14.0",
    "Pillow>=10.0,<12.0",
]
tui = [
    "querri[cli]",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
dev = [
    "querri[cli,tui,test]",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
querri = "querri.cli:app"

[project.urls]
Homepage = "https://querri.com"
Documentation = "https://docs.querri.com/sdk/python"
Repository = "https://github.com/querri-ai/querri-python"

[tool.hatch.build.targets.wheel]
packages = ["querri"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a running Querri instance",
]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
